# rusttest

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: test.frag  test.vert
src/: debug.rs  log.rs  main.rs  resource.rs
src/gfx/: batch.rs  camera.rs  mod.rs  shader.rs  viewport.rs
src/logic/: iterator.rs  mod.rs  query.rs  system.rs  world.rs
src/math/: affine.rs  isometry.rs  mod.rs
src/system/: input.rs  mod.rs  windows.rs
src/world/: ecs.rs  mod.rs
