[package]
name = "rusttest"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
sdl2 = { version = "0.35.0", features = ["bundled", "static-link"] }
thiserror = "1.0.31"
glam = { version = "0.20.5", default-features = false, features = ["libm"] }

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "processenv"]

[build-dependencies]
walkdir = "2.1"